--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ log/*
 
 !*/.keep
 
+.idea/deep_vlad.iml
+.idea/misc.xml
+
 ################################################################################
 ## Python
 ################################################################################
