update project settings

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,6 @@ log/*
 
 !*/.keep
 
-.idea/deep_vlad.iml
-.idea/misc.xml
 
 ################################################################################
 ## Python
@@ -113,7 +111,10 @@ celerybeat-schedule
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
+.idea/deep_vlad.iml
+.idea/misc.xml
 .idea/workspace.xml
+.idea/modules.xml
 .idea/tasks.xml
 .idea/dictionaries
 .idea/vcs.xml
