--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,5 +1,34 @@
-argparse==1.2.1
+appnope==0.1.0
+cycler==0.10.0
+Cython==0.24
+dask==0.8.1
+decorator==4.0.9
+gnureadline==6.3.3
+h5py==2.5.0
+ipython==4.1.2
+ipython-genutils==0.1.0
+leveldb==0.193
+matplotlib==1.5.1
+networkx==1.11
+nose==1.3.7
 numpy==1.11.0
-scikit-learn==0.17.1
+pandas==0.18.0
+path.py==8.1.2
+pexpect==4.0.1
+pickleshare==0.6
+Pillow==3.2.0
+progressbar-latest==2.4
+protobuf==2.6.1
+ptyprocess==0.5.1
+pyparsing==2.1.1
+python-dateutil==1.5
+python-gflags==2.0
+pytz==2016.3
+PyYAML==3.11
+requests==2.9.1
+scikit-image==0.12.3
 scipy==0.17.0
-wsgiref==0.1.2
+simplegeneric==0.8.1
+six==1.10.0
+toolz==0.7.4
+traitlets==4.2.1
